fix: force line-break to prevent overlapping in trial logs [DET-5121] (#2071)

--- a/webui/react/src/components/LogViewer.module.scss
+++ b/webui/react/src/components/LogViewer.module.scss
@@ -64,6 +64,7 @@
   .line > .time::after { content: '\00a0'; }
   .line > .message {
     flex-grow: 1;
+    line-break: anywhere;
     white-space: pre-wrap;
     word-break: break-all;
   }
